// Gcloud-specific extensions for the asset model

syntax = "proto3";

package model;
option go_package = ".;assets";

message GCloudVM {
  string machine_type = 1;
  string region = 2;
  string zone = 3;
  // OnDemand, Preemptible, Commit1Yr, Commit3Yr
  string scheduling = 4;
  string sharing = 5; // SoleTenancy, SharedCpu. Default is nothing.
  string network_tier = 6;

  string os_choice = 7;

  // boot disk: image (public | custom | snapshot | use existing disk);
  // for public image: operating system and version
  // for all boot disks: type (pd, ssd or standard) and size (default is 10GB)
  // maybe just treat them all as local disks
}

message GCloudDisk {
  string disk_type = 1;
  bool is_regional = 2;
  string region = 3;
  string zone = 4;  // only for zonal disks
}

message GCloudSubnetwork {
  string tier = 1;
  string region = 2;
}


